// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`additional language syntax gets registered and applied correctly 1`] = `
"<pre class=\\"language-svelte\\"><code class=\\"language-svelte\\">
  <span class=\\"token each\\"><span class=\\"token punctuation\\">{</span><span class=\\"token keyword\\">#each</span> <span class=\\"token language-javascript\\">items </span><span class=\\"token keyword\\">as</span> <span class=\\"token language-javascript\\">item<span class=\\"token punctuation\\">,</span> i<span class=\\"token punctuation\\">}</span></span></span>
    <span class=\\"token language-javascript\\"><span class=\\"token punctuation\\">{</span>item<span class=\\"token punctuation\\">.</span><span class=\\"token property-access\\">name</span><span class=\\"token punctuation\\">}</span></span>
  <span class=\\"token language-javascript\\"><span class=\\"token punctuation\\">{</span><span class=\\"token operator\\">/</span>each<span class=\\"token punctuation\\">}</span></span>
</code></pre>"
`;

exports[`copies the language- class to pre tag 1`] = `"<pre class=\\"language-css\\"><code class=\\"language-css\\"></code></pre>"`;

exports[`does nothing to code block without language- class 1`] = `"<pre><code>p { color: red }</code></pre>"`;

exports[`finds code and highlights 1`] = `
"<div>
  <p>foo</p>
  <pre class=\\"language-css\\"><code class=\\"language-css\\"><span class=\\"token selector\\">p</span> <span class=\\"token punctuation\\">{</span> <span class=\\"token property\\">color</span><span class=\\"token punctuation\\">:</span> red <span class=\\"token punctuation\\">}</span></code></pre>
</div>"
`;

exports[`handles uppercase languages correctly 1`] = `
"<div>
  <p>foo</p>
  <pre class=\\"language-css\\"><code class=\\"language-CSS\\"><span class=\\"token selector\\">p</span> <span class=\\"token punctuation\\">{</span> <span class=\\"token property\\">color</span><span class=\\"token punctuation\\">:</span> red <span class=\\"token punctuation\\">}</span></code></pre>
</div>"
`;

exports[`with options.ignoreMissing, does nothing to code block with fake language- class 1`] = `"<pre class=\\"language-thisisnotalanguage\\"><code class=\\"language-thisisnotalanguage\\">p { color: red }</code></pre>"`;
